--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,6 @@
 <!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
-<% if current_user.admin? || current_user.id == @ser.id%>
+<% if current_user.admin? || current_user.id == @order.user_id%>
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px" id="band">
     <h2>Order Details</h2>
 
